CVS HEAD
  * Added support for send effects

jlscp v0.8: 2009-08-03
  * Added support for monitoring MIDI events on sampler channels
    and MIDI devices

  * Added support for sending MIDI messages to sampler channels

  * Added support for retrieving instrument's key mapping and
    keyswitch mapping

  * Implemented option for adding instruments in separate directories in the
    instruments DB (patch by Chris Cherrett & Andrew Williams, a bit adjusted)

  * Added support for controlling the global sampler-wide limit of
    maximum voices and disk streams

  * Added support for escaping unicode characters

  * API Changes
    - Client: added new methods - getMidiInstrumentEntries,
      findLostDbInstrumentFiles, setDbInstrumentFilePath, setSoTimeout
      getExtendedCharacterEscaping, setExtendedCharacterEscaping
    - Parser: added new method - toExtendedEscapeSequence

  * Bug fixes:
    - null parameters and parameters with null names are now not sent
      to LinuxSampler
    - fixed a bug in DB_INSTRUMENTS_JOB_INFO notifications
    - fixed bug #75
    - fixed bug #104

jlscp v0.7a: 2007-12-06
  * Added support for monitoring the total number of active disk streams

  * API Changes
    - Added new interface - Instrument
    - Client: added new methods - getFileInstrumentCount,
      getFileInstrumentInfo,  getFileInstruments
    - MidiInputDevice: added new methods - getPortsParameter,
      setPortsParameter
    - Parser: some of the methods are now public

jlscp v0.6a: 2007-10-15
  * Added support for escape sequences

  * API Changes
    - Client: added new methods - editChannelInstrument, formatInstrumentsDb
    - Client: getAudioOutputDriverInfo is now public and accepts a
      dependences list of parameters
    - Client: getMidiInputDriverInfo is now public and accepts a
      dependences list of parameters

  * Bug fixes:
    - Parameters with unset values are now not sent to LinuxSampler

jlscp v0.5a: 2007-05-24